tests/baselines/reference/numericIndexerTyping2.errors.txt
==== tests/cases/compiler/numericIndexerTyping2.ts (2 errors) ====
    class I {
        [x: string]: Date
    }
    
    class I2 extends I {
    }
    
    var i: I;
    var r: string = i[1]; // error: numeric indexer returns the type of the string indexer
        ~
!!! Type 'Date' is not assignable to type 'string'.
    
    var i2: I2;
    var r2: string = i2[1]; // error: numeric indexer returns the type of the string indexere
        ~~
!!! Type 'Date' is not assignable to type 'string'.